erDiagram
  CUSTOMERS ||--o{ ORDERS : places
  ORDERS ||--o{ ORDER_ITEMS : contains
  PRODUCTS ||--o{ ORDER_ITEMS : appears_in
  SELLERS ||--o{ ORDER_ITEMS : fulfills
  ORDERS ||--o{ ORDER_PAYMENTS : paid_by
  ORDERS ||--o{ ORDER_REVIEWS : receives
  PRODUCTS }o--|| CATEGORY_TRANSLATION : translated_by
  CUSTOMERS }o--o{ GEOLOCATION : zip_observation
  SELLERS }o--o{ GEOLOCATION : zip_observation

  CUSTOMERS { text customer_id PK text customer_unique_id }
  ORDERS { text order_id PK text customer_id FK }
  ORDER_ITEMS { text order_id PK int order_item_id PK text product_id FK text seller_id FK }
  PRODUCTS { text product_id PK text product_category_name }
  SELLERS { text seller_id PK text seller_state }
  ORDER_PAYMENTS { text order_id PK int payment_sequential PK }
  ORDER_REVIEWS { text review_id PK text order_id FK }
  GEOLOCATION { bigint geolocation_id PK int zip_prefix }
  CATEGORY_TRANSLATION { text product_category_name PK }
